# chat/internal/app/controllers/chat/grpc/v1/get_chat_convertors.go
@@ -3,6 +3,7 @@ package v1
 import (
 	"github.com/PechatnovVladimir/msa_big_tech/chat/internal/app/usecases/chat/dto"
 	"github.com/PechatnovVladimir/msa_big_tech/chat/pkg/proto/api/chat/v1"
+	"google.golang.org/protobuf/types/known/timestamppb"
 )
 
 func fromGetChatRequestToDto(in *chat.GetChatRequest) *dto.GetChatIN {
@@ -14,7 +15,9 @@ func fromGetChatRequestToDto(in *chat.GetChatRequest) *dto.GetChatIN {
 func fromDtoToGetChatResponse(in *dto.GetChatOUT) *chat.GetChatResponse {
 	return &chat.GetChatResponse{
 		Chat: &chat.Chat{
-			ChatId: in.ChatID,
+			ChatId:    in.Chat.ChatID,
+			CreatedAt: timestamppb.New(in.Chat.CreateAt),
+			UserIds:   in.Chat.Members,
 		},
 	}
 }
